Rettet fejl hvor undermenuer ikke blev rendered

--- a/style.css
+++ b/style.css
@@ -66,9 +66,9 @@
     width: 390px;
 }
 
-.mærker {
+.undermenuer {
     text-align: center;
-    background: #807070;
+    background: #EBE8DF;
     font-size: 30px;
     height: 176px;
     width: 390px;
@@ -77,7 +77,7 @@
 .footer {
     text-align: center;
     background: #8CAE89;
-    font-size: 30px;
-    height: 305px;
+    font-size: 305px;
+    height: 30px;
     width: 390px;
 }
