--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,14 @@ body {
 
 /* Header design */
 .header {
-    text-align: center;
     background: #8CAE89;
     font-size: 30px;
     height: 75px;
   }
+
+.header-icons {
+    margin-top: 5px;
+}
 
   /* Ikoner der deler fælles design TIL VENSTRE */
 .header-icons-left {
@@ -35,7 +38,7 @@ body {
 }
 
   /* Ikoner der deler fælles design TIL HØJRE */
-  .header-icons-right {
+.header-icons-right {
     width: 60px;
     height: 60px;
     border: 2px solid blue;
