--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ header {
     width: 50px;
     height: 50px;
     padding: 2px;
+    margin-top: 7px;
 }
 
 .header-icons-left, .header-icons-right {
