--- a/css/style.css
+++ b/css/style.css
@@ -50,11 +50,18 @@ header {
     margin-left: 12px
 }
 
+/* Hero design */
 .hero {
-    text-align: center;
-    background: white;
-    font-size: 30px;
-    height: 390px;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+
+#hero-video {
+    top: 50%;
+    left: 50%;
+    width: 485px; /* Sæt til auto for responsivitet */
+    height: auto;
 }
 
 .genbrug {
