--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
   }
 
 * {
+    text-align: center;
     box-sizing: border-box;
     margin: auto;
     font-family: Poppins;
@@ -80,7 +81,6 @@ header {
     width: 180px;
     height: 69px;
     border-radius: 20px;
-    text-align: center;
     padding: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -110,7 +110,6 @@ header {
 
 /* Udvalgt */
 .udvalgt {
-    text-align: center;
     background: white;
     font-size: 30px;
     height: 476px;
@@ -119,7 +118,6 @@ header {
 
 /* Matrialer */
 .matrialer {
-    text-align: center;
     background-color: #807070;
     height: auto;
     color: White;
@@ -149,37 +147,32 @@ h2 {
 .matriale-udvalg {
     flex: 1;
     padding: 20px;
-    text-align: center;
     border: 1px solid #ccc;
   }
 
 
 
 
-
+/* Certificeringer */
 .certificeringer {
-    text-align: center;
     background: #807070;
     font-size: 30px;
     height: auto;
 }
 
 .mærker {
-    text-align: center;
     background: #EBE8DF;
     font-size: 30px;
     height: auto;
 }
 
 .undermenuer {
-    text-align: center;
     background: #EBE8DF;
     font-size: 30px;
     height: auto;
 }
 
 .footer {
-    text-align: center;
     background: #8CAE89;
     font-size: 305px;
     height: auto;
