--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     color:white
   }
 
-/* Buttons generelle design-indstillninger */
+/* Generelle design-indstillninger */
 .button-farve {
     background-color: #E99F83 ;
 }
@@ -22,8 +22,13 @@ a {
     color:white;
     text-decoration: none;
 }
-  
-/* Baggrundsfarve & bredde for hjemmesiden */
+
+h2 {
+    margin-top: 20px;
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
 body {
     background-color: #807070;
     width: 100%
@@ -131,17 +136,11 @@ header {
     font-size: 30px;
 }
 
-h2 {
-    margin-top: 20px;
-    font-size: 40px;
-    margin-bottom: 20px;
-    font-size: 24px;
-}
-
 .matrialer-content {
     display: flex;          
     justify-content: space-between;
     gap: 20px;
+    margin-bottom: 20px;
   }
   
 .matriale-udvalg {
@@ -156,16 +155,29 @@ h2 {
 /* Certificeringer */
 .certificeringer {
     background: #807070;
-    font-size: 30px;
+    width: 100%;
     height: auto;
 }
 
+#afstand {
+    margin-bottom: 20px;
+}
+
+/* Mærker */
 .mærker {
     background: #EBE8DF;
     font-size: 30px;
+    width: 100%;
+    height: auto;
+    margin: 20px;
+}
+
+.certifi {
+    width: 100%;
     height: auto;
 }
 
+/* Undermenuer */
 .undermenuer {
     background: #EBE8DF;
     font-size: 30px;
