Siden er lavet på dansk nu

--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,7 @@ header {
     height: 60px;
     margin-bottom: 6px;
     text-align: left;
+    color: black;
 }
 
 #undermenu2 {
@@ -204,6 +205,7 @@ header {
     height: 60px;
     margin-bottom: 6px;
     text-align: left;
+    color: black;
 }
 
 #undermenu3 {
@@ -212,6 +214,7 @@ header {
     height: 60px;
     margin-bottom: 6px;
     text-align: left;
+    color: black;
 }
 
 #undermenu4 {
@@ -220,6 +223,7 @@ header {
     height: 60px;
     margin-bottom: 6px;
     text-align: left;
+    color: black;
 }
 
 
