--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
     margin: auto;
     font-family: Poppins;
     font-weight: bold;
-    color:white
   }
 
 /* Generelle design-indstillninger */
@@ -75,6 +74,7 @@ header {
     position: relative;
     width: 100%;
     height: 100vh;
+    color: white
 }
 
 #hero-video {
@@ -82,6 +82,7 @@ header {
     left: 50%;
     width: 100%;
     height: auto;
+    color: white
 }
 
 /* Genbrugs Sektion */
@@ -94,26 +95,29 @@ header {
     margin-top: 20px;
     margin-bottom: 20px;
     padding-bottom: 20px;
+    color: white
 }
 
 .genbrug {
     background: #807070;
     font-size: 30px;
     display: flex;  
-    height: auto;          
+    height: auto;   
+    color: white       
 }
 
 .shop-slogan-beregn {
     display: flex;
-    flex-direction: column; /* Stack items vertically */
-    align-items: center;    /* Align items in the center horizontally */
+    flex-direction: column;
+    align-items: center; 
 }
 
 .responsive-image {
     display: block;
     max-width: 100%;       
     max-height: 100%;      
-    object-fit: contain;    
+    object-fit: contain;
+    color: white    
   }
 
 
@@ -122,6 +126,7 @@ header {
     background: white;
     font-size: 30px;
     height: 476px;
+    color: black
 }
 
 
@@ -134,10 +139,12 @@ header {
 
 .smalltext p {
     font-size: 12px; 
+    color: white
 }
 
 .link-text {
     font-size: 30px;
+    color: white
 }
 
 .matrialer-content {
@@ -147,17 +154,20 @@ header {
     margin-bottom: 20px;
     width: auto;
     height: auto;
+    color: white
   }
   
 .matriale-udvalg {
     flex: 1;
     padding: 20px;
     border: 1px solid #ccc;
+    color: white
   }
 
 .matriale-udvalg img {
     width: auto;
     height: 120px;
+    color: white
 }
 
 
@@ -167,6 +177,7 @@ header {
     background: #807070;
     width: 100%;
     height: auto;
+    color: white
 }
 
 #afstand {
@@ -180,6 +191,7 @@ header {
     width: 100%;
     height: auto;
     margin: 20px;
+    color: white
 
 }
 
