--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ header {
   }
 
 .header-icons {
-    filter: invert(1);
+    textfilter: invert(1);
     width: 50px;
     height: 50px;
     padding: 2px;
