--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ p {
 
 body {
     background-color: #807070;
-    width: 100%
+    width: 100%;
+    padding-top: 75px;
 }  
 
 /* Header design */
@@ -56,6 +57,13 @@ header {
     height: 75px;
     padding: 0 20 px;
   }
+.menu-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+}
 
 .header-icons {
     width: 50px;
@@ -81,7 +89,6 @@ header {
 .hero {
     position: relative;
     width: 100%;
-    height: 100vh;
     color: white
 }
 
@@ -90,11 +97,40 @@ header {
     left: 50%;
     width: 100%;
     height: auto;
-    color: white
+    color: white;
+}
+
+#hero-footer {
+    position: absolute;
+    left: 0;
+    bottom: 3%;
+    display: flex; 
+    justify-content: center;
+    width: 100%;
 }
 
 /* Genbrugs Sektion */
-
+.knap-orange {
+    border-radius: 20px;
+    color: white;
+    background-color: #E99F83;
+    outline: 0;
+    border: none;
+    align-self: center;
+}
+.knap-orange:hover {
+    background-color: #8CAE89;
+    cursor: pointer;
+}
+.knap-stor {
+    width: 180px;
+    height: 69px;
+    padding: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    font-size: 1em;
+}
 .button1 {
     width: 180px;
     height: 69px;
