--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,11 @@ header {
     width: 100%;
 }
 
+#shopnu {
+    padding: 20px 40px !important;
+    font-size: 32px !important;
+}
+
 /* Genbrugs Sektion */
 .knap-orange {
     border-radius: 20px;
