--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,16 @@ header {
   }
 .menu-header {
     position: fixed;
+    display: flex;
+    align-items: center;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
+}
+
+#header-logo {
+    margin-top: 10px;
 }
 
 .header-icons {
@@ -75,14 +81,47 @@ header {
     color: white !important;
 }
 
-.header-icons-left, .header-icons-right {
+.menu-header > div {
+    flex: 1;
+}
+
+.header-icons-right {
     display: flex;
-    margin: 0 10px;
+    justify-content: flex-end;
 }
 
 #burgermenu {
     margin-left: 10px;
 }
+
+.burger-menu {
+    position: fixed;
+    z-index: 4;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #807070;
+    transform: translateX(-100%);
+    transition: transform 0.2s ease-in-out;
+}
+
+
+#burger-menu-toggler:checked + .burger-menu {
+    transform: translateX(0%);
+}
+
+#burger-menu-toggler {
+    display: none;
+}
+
+#label-close-burger-menu {
+    font-size: 2rem;
+    color: white;
+    margin-left: 8px;
+}
+
+
 
 /* Hero design */
 .hero {
@@ -134,6 +173,19 @@ header {
 .knap-mellem {
     padding: 12px 17px;
     font-size: 1em;
+}
+
+.knap-grøn {
+    background-color: #8CAE89;
+    color: white;
+    border-radius: 20px;
+    outline: 0;
+    border: none;
+}
+
+.knap-grøn:hover {
+    background-color: #E99F83;
+    cursor: pointer;
 }
 
 .genbrug {
@@ -225,7 +277,7 @@ header {
 
 .slide {
     width: 100%;
-    height: 400px;
+    height: 550px;
     position: relative;
     display: none;
 }
@@ -259,12 +311,12 @@ display: block;
     gap: 12px;
 }
 
-.fa-chevron-left {
+.btn-previous-slide > .fa-chevron-left {
     font-size: 4rem;
     color: #A8A399;
     padding-left: 30px;
 }
-.fa-chevron-right {
+.btn-next-slide > .fa-chevron-right {
     font-size: 4rem;
     color: #A8A399;
     padding-right: 30px;
@@ -440,6 +492,10 @@ display: block;
     height: auto;
 }
 
+.tab-label a {
+    color: black;
+}
+
 /*Accordion*/
 .accordion > .tab {
     position: relative;
@@ -544,6 +600,14 @@ nav {
     background-position: center;
 }
 
+.product-img-small {
+    height: 142px;
+    width: 92px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 .dame-blazer-brun {
     background-image: url('../img/dame-blazer-brun.png');
 }
@@ -562,6 +626,26 @@ nav {
 
 .dame-blazer-navy {
     background-image: url('../img/dame-blazer-navy.png');
+}
+
+.herre-blazer-brun {
+    background-image: url('../img/herre-blazer-brun.png');
+}
+
+.herre-blazer-grå {
+    background-image: url('../img/herre-blazer-grå.png');
+}
+
+.herre-blazer-sort {
+    background-image: url('../img/herre-blazer-sort.png');
+}
+
+.herre-blazer-beige {
+    background-image: url('../img/herre-blazer-beige.png');
+}
+
+.herre-blazer-navy {
+    background-image: url('../img/herre-blazer-navy.png');
 }
 
 .circle-small {
@@ -586,6 +670,18 @@ nav {
 .bg-navy {
     background-color: #1E2632;
 }
+.bg-white {
+    background-color: white;
+}
+.bg-blue {
+    background-color: #B9C7D6;
+}
+.bg-tan {
+    background-color: #D3C5AA;
+}
+
+/* Produkt underside*/
+
 .tab-panel {
     margin: 12px 12px
 }
@@ -631,12 +727,125 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 8px;
-    gap: 12px;
+    padding: 12px 32px;
+    gap: 6pxpx;
 }
 .tab-panel > .tab, .tab-panel > .tab-trigger {
     display: none;
 }
 .tab-panel > .tab-trigger:checked + .tab {
     display: block;
+}
+
+.look-products-row {
+    display: flex;
+    width: 100%;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.lille-dame-blazer-brun {
+    background-image: url('../img/dame-blazer-brun.png');
+}
+
+.lille-dame-blazer-grå {
+    background-image: url('../img/dame-blazer-grå.png');
+}
+
+.lille-dame-blazer-sort {
+    background-image: url('../img/dame-blazer-sort.png');
+}
+
+.lille-dame-blazer-beige {
+    background-image: url('../img/dame-blazer-beige.png');
+}
+
+.lille-dame-blazer-navy {
+    background-image: url('../img/dame-blazer-navy.png');
+}
+
+.lille-dame-buks-brun {
+    background-image: url('../img/dame-buks-brun.png');
+}
+
+.lille-dame-buks-grå {
+    background-image: url('../img/dame-buks-grå.png');
+}
+
+.lille-dame-buks-sort {
+    background-image: url('../img/dame-buks-sort.png');
+}
+
+.lille-dame-buks-beige {
+    background-image: url('../img/dame-buks-beige.png');
+}
+
+.lille-dame-buks-navy {
+    background-image: url('../img/dame-buks-navy.png');
+}
+
+.lille-dame-skjorte-blå {
+    background-image: url('../img/dame-skjorte-blå.png');
+}
+
+.lille-dame-skjorte-hvid {
+    background-image: url('../img/dame-skjorte-hvid.png');
+}
+
+.lille-dame-skjorte-tan {
+    background-image: url('../img/dame-skjorte-tan.png');
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+}
+
+.gap-big {
+    gap: 50px;
+}
+
+#spar-text {
+    text-align: center;
+}
+
+.section-header {
+    text-align: center;
+    position: relative;
+}
+
+.section-header::before, .section-header::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    width: 150%;
+    height: 1px;
+    background-color: black;
+}
+
+.section-header::before {
+    left: 80px;
+}
+
+.section-header::after {
+    right: 80px;
+}
+
+.flex-start {
+    align-items: flex-start;
+}
+
+.burger-menu .tab-label {
+    background-color: #E99F83 !important;
+    color: white !important; 
+}
+
+.burger-menu a {
+    color: white;
+}
+
+.burger-menu .tab-content-inner a {
+    color: black;
 }
